@@ -18,7 +18,7 @@ PCILIB=lib/libpci.a
 PCIINC=lib/config.h lib/header.h lib/pci.h lib/types.h lib/sysdep.h
 
 ifeq ($(shell uname),NetBSD)
-PCILIB=libpciutils.a
+PCILIB=lib/libpciutils.a
 LDFLAGS+=-lpci
 else
 ifeq ($(shell uname),AIX)
